2012-08-19  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* join4.c: Test for new pthread_timedjoin_np routine
	* Makefile (join4): Added.
	* GNUmakefile (join4): Added.
	* Bmakefile (join4): Added.
	* Wmakefile (join4): Added.

2012-08-11  Daniel Richard. G <danielg at teragram dot com>

	* Makefile: Various improvements.
	* GNUmakefile: Likewise.

2011-07-20  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* cancel2.c (PTHREAD_CANCELED): Fix cast warning when compiling with g++.
	* cleanup0.c (PTHREAD_CANCELED): Likewise.
	* cleanup1.c (PTHREAD_CANCELED): Likewise.

2012-07-19  Daniel Richard. G <danielg at teragram dot com>

	* Makefile: Various fixes.
	* GNUmakefile: Likewise.

2011-07-03  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* create3.c: Removed; testing a condition that is not in the library's
	scope and was more trouble than it was worth.
	* cancel2.c: Ensure this test only runs for Structured or C++ EH.
	* exit2.c: Shorten Sleep() time.
	* exit3.c: Likewise.
	* cancel1.c: Likewise.
	* cancel3.c: Likewise.
	* exception3.c: Likewise; make terminate routine consistent for all
	build environments.

2011-07-02  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* spin3.c: Unlock the unlocked spinlock now returns success.
	* rwlock3.c: Join the thread to ensure it's completed.
	* rwlock4.c: Likewise.
	* rwlock5.c: Likewise.
	* Makefile: Adjust prerequisites.
	* GNUmakefile: Likewise.
	* Bmakefile: Likewise.
	* Wmakefile: Likewise.

2011-07-02 Daniel Richard G. <skunk at iskunk dot org>

	* *.[ch]: Cleanups around timeb struct, mainly centralising
	macro definitions in test.h.
	* Makefile: Fix annoying nmake warning.

2011-06-30  Ross Johnson <ross.johnson at homemail.com.au>

	* sequence1.c: Fix loop overrun.

2011-05-11  Ross Johnson <ross.johnson at homemail.com.au>

	* GNUmakefile (GCE-debug): New target; expects pthreadGCE2d.dll.
	
2011-05-05  Ross Johnson <ross.johnson at homemail.com.au>
