@@ -40,7 +40,6 @@
  */
 
 #include "test.h"
-#include <sys/timeb.h>
 
 #ifdef __GNUC__
 #include <stdlib.h>
