@@ -42,7 +42,6 @@
  */
 
 #include "test.h"
-#include <sys/timeb.h>
 
 static int lockCount;
 
